@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils flag-o-matic toolchain-funcs
+inherit eutils flag-o-matic multilib toolchain-funcs
 
 DESCRIPTION="NativeBigInteger libs for Freenet taken from i2p"
 HOMEPAGE="http://www.i2p.net"
@@ -10,24 +10,23 @@ SRC_URI="http://dev.gentooexperimental.org/~tommy/${P}.tar.bz2"
 
 LICENSE="|| ( public-domain BSD MIT )"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND="dev-libs/gmp"
 RDEPEND="${DEPEPND}"
 
-append-flags -fPIC
-tc-getCC >/dev/null
-
 QA_TEXTRELS="opt/freenet/lib/libjcpuid-x86-linux.so"
 
 src_compile() {
+	append-flags -fPIC
+	tc-export CC
 	cp "${FILESDIR}"/Makefile .
 	make libjbigi || die
-	filter-flags -fPIC
+	use amd64 || filter-flags -fPIC
 	make libjcpuid || die
 }
 
 src_install() {
-	make DESTDIR="${D}" install || die
+	make DESTDIR="${D}" LIBDIR=$(get_libdir) install || die
 }
